force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__PaidDays__c.field-meta.xml
<CustomField>
    <fullName>cve__PaidDays__c</fullName>
    <label>Paid Days</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>