force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__PaidStart__c.field-meta.xml
<CustomField>
    <fullName>cve__PaidStart__c</fullName>
    <inlineHelpText>Earliest paid Payment Start date</inlineHelpText>
    <label>Paid Start</label>
    <type>Date</type>
</CustomField>