force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__PaidThrough__c.field-meta.xml
<CustomField>
    <fullName>cve__PaidThrough__c</fullName>
    <inlineHelpText>Latest paid Payment through date</inlineHelpText>
    <label>Paid Through</label>
    <type>Date</type>
</CustomField>