force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__PaidUpDividendAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__PaidUpDividendAmount__c</fullName>
    <label>Paid Up Dividend Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>