force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__PaidWeekDays__c.field-meta.xml
<CustomField>
    <fullName>cve__PaidWeekDays__c</fullName>
    <label>Paid Week Days</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>