force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__Paraplegia__c.field-meta.xml
<CustomField>
    <fullName>cve__Paraplegia__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Movement of both lower limbs</inlineHelpText>
    <label>Paraplegia</label>
    <type>Checkbox</type>
</CustomField>