force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__PremiumPeriod__c.field-meta.xml
<CustomField>
    <fullName>cve__PremiumPeriod__c</fullName>
    <label>Premium Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>