force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__PremiumsPaidThrough__c.field-meta.xml
<CustomField>
    <fullName>cve__PremiumsPaidThrough__c</fullName>
    <label>Premiums Paid Through</label>
    <type>Date</type>
</CustomField>