force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ProofOfLoss__c.field-meta.xml
<CustomField>
    <fullName>cve__ProofOfLoss__c</fullName>
    <label>Proof of Loss</label>
    <type>Date</type>
</CustomField>