force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__Quadriplegia__c.field-meta.xml
<CustomField>
    <fullName>cve__Quadriplegia__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Movement of both upper and lower limbs</inlineHelpText>
    <label>Quadriplegia</label>
    <type>Checkbox</type>
</CustomField>