force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__Reapproved__c.field-meta.xml
<CustomField>
    <fullName>cve__Reapproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reapproved</label>
    <type>Checkbox</type>
</CustomField>