force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ReapprovedDate__c.field-meta.xml
<CustomField>
    <fullName>cve__ReapprovedDate__c</fullName>
    <label>Reapproved Date</label>
    <type>DateTime</type>
</CustomField>