force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__RehabilitationMaximum__c.field-meta.xml
<CustomField>
    <fullName>cve__RehabilitationMaximum__c</fullName>
    <formula>IF (! ISNULL(cve__Benefit__r.cve__RehabilitationAmountMaximum__c) &amp;&amp; ! ISNULL(cve__Benefit__r.cve__RehabilitationPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
    MIN(cve__Benefit__r.cve__RehabilitationAmountMaximum__c,  cve__Benefit__r.cve__RehabilitationPercentageMaximum__c *  cve__CoverageAmount__c),
    IF (! ISNULL(cve__Benefit__r.cve__RehabilitationAmountMaximum__c),
        cve__Benefit__r.cve__RehabilitationAmountMaximum__c,
        IF (! ISNULL(cve__Benefit__r.cve__RehabilitationPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
            cve__Benefit__r.cve__RehabilitationPercentageMaximum__c * cve__CoverageAmount__c,
            null
        )
    )
)</formula>
    <label>Rehabilitation Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>