force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__RepatriationMaximum__c.field-meta.xml
<CustomField>
    <fullName>cve__RepatriationMaximum__c</fullName>
    <formula>IF (! ISNULL(cve__Benefit__r.cve__RepatriationAmountMaximum__c) &amp;&amp; ! ISNULL(cve__Benefit__r.cve__RepatriationPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
    MIN(cve__Benefit__r.cve__RepatriationAmountMaximum__c,  cve__Benefit__r.cve__RepatriationPercentageMaximum__c *  cve__CoverageAmount__c),
    IF (! ISNULL(cve__Benefit__r.cve__RepatriationAmountMaximum__c),
        cve__Benefit__r.cve__RepatriationAmountMaximum__c,
        IF (! ISNULL(cve__Benefit__r.cve__RepatriationPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
            cve__Benefit__r.cve__RepatriationPercentageMaximum__c * cve__CoverageAmount__c,
            null
        )
    )
)</formula>
    <label>Repatriation Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>