force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ResidentState__c.field-meta.xml
<CustomField>
    <fullName>cve__ResidentState__c</fullName>
    <label>Resident State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AK-ALASKA</fullName>
            </value>
            <value>
                <fullName>AL-ALABAMA</fullName>
            </value>
            <value>
                <fullName>AR-ARKANSAS</fullName>
            </value>
            <value>
                <fullName>AZ-ARIZONA</fullName>
            </value>
            <value>
                <fullName>CA-CALIFORNIA</fullName>
            </value>
            <value>
                <fullName>CO-COLORADO</fullName>
            </value>
            <value>
                <fullName>CT-CONNECTICUT</fullName>
            </value>
            <value>
                <fullName>DC-DISTRICT OF COLUMBIA</fullName>
            </value>
            <value>
                <fullName>DE-DELAWARE</fullName>
            </value>
            <value>
                <fullName>FL-FLORIDA</fullName>
            </value>
            <value>
                <fullName>GA-GEORGIA</fullName>
            </value>
            <value>
                <fullName>HI-HAWAII</fullName>
            </value>
            <value>
                <fullName>IA-IOWA</fullName>
            </value>
            <value>
                <fullName>ID-IDAHO</fullName>
            </value>
            <value>
                <fullName>IL-ILLINOIS</fullName>
            </value>
            <value>
                <fullName>IN-INDIANA</fullName>
            </value>
            <value>
                <fullName>KS-KANSAS</fullName>
            </value>
            <value>
                <fullName>KY-KENTUCKY</fullName>
            </value>
            <value>
                <fullName>LA-LOUISIANA</fullName>
            </value>
            <value>
                <fullName>MA-MASSACHUSETTS</fullName>
            </value>
            <value>
                <fullName>MD-MARYLAND</fullName>
            </value>
            <value>
                <fullName>ME-MAINE</fullName>
            </value>
            <value>
                <fullName>MI-MICHIGAN</fullName>
            </value>
            <value>
                <fullName>MN-MINNESOTA</fullName>
            </value>
            <value>
                <fullName>MO-MISSOURI</fullName>
            </value>
            <value>
                <fullName>MS-MISSISSIPPI</fullName>
            </value>
            <value>
                <fullName>MT-MONTANA</fullName>
            </value>
            <value>
                <fullName>NC-NORTH CAROLINA</fullName>
            </value>
            <value>
                <fullName>ND-NORTH DAKOTA</fullName>
            </value>
            <value>
                <fullName>NE-NEBRASKA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>