force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__SeatBeltApplicable__c.field-meta.xml
<CustomField>
    <fullName>cve__SeatBeltApplicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seat Belt Applicable</label>
    <type>Checkbox</type>
</CustomField>