force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__SeatBeltDecision__c.field-meta.xml
<CustomField>
    <fullName>cve__SeatBeltDecision__c</fullName>
    <label>Seat Belt Decision</label>
    <type>Date</type>
</CustomField>