force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__SeatBeltDenied__c.field-meta.xml
<CustomField>
    <fullName>cve__SeatBeltDenied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seat Belt Denied</label>
    <type>Checkbox</type>
</CustomField>