force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__SightInBothEyes__c.field-meta.xml
<CustomField>
    <fullName>cve__SightInBothEyes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sight in Both Eyes</label>
    <type>Checkbox</type>
</CustomField>