force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__SightInOneEyeLoss__c.field-meta.xml
<CustomField>
    <fullName>cve__SightInOneEyeLoss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sight in One Eye</label>
    <type>Checkbox</type>
</CustomField>