force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__SpeechAndHearingInBothEars__c.field-meta.xml
<CustomField>
    <fullName>cve__SpeechAndHearingInBothEars__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speech and Hearing in Both Ears</label>
    <type>Checkbox</type>
</CustomField>