force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__SpeechOrHearingInBothEars__c.field-meta.xml
<CustomField>
    <fullName>cve__SpeechOrHearingInBothEars__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speech or Hearing in Both Ears</label>
    <type>Checkbox</type>
</CustomField>