force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__SpouseEducationMaximum__c.field-meta.xml
<CustomField>
    <fullName>cve__SpouseEducationMaximum__c</fullName>
    <formula>IF (! ISNULL(cve__Benefit__r.cve__SpouseEducationAmountMaximum__c) &amp;&amp; ! ISNULL(cve__Benefit__r.cve__SpouseEducationPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
    MIN(cve__Benefit__r.cve__SpouseEducationAmountMaximum__c,  cve__Benefit__r.cve__SpouseEducationPercentageMaximum__c *  cve__CoverageAmount__c),
    IF (! ISNULL(cve__Benefit__r.cve__SpouseEducationAmountMaximum__c),
        cve__Benefit__r.cve__SpouseEducationAmountMaximum__c,
        IF (! ISNULL(cve__Benefit__r.cve__SpouseEducationPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
            cve__Benefit__r.cve__SpouseEducationPercentageMaximum__c * cve__CoverageAmount__c,
            null
        )
    )
)</formula>
    <label>Spouse Education Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>