force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__Stage__c.field-meta.xml
<CustomField>
    <fullName>cve__Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eligibility</fullName>
                <default>true</default>
                <label>Eligibility</label>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>