force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__Status__c.field-meta.xml
<CustomField>
    <fullName>cve__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approval Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>