force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__StatusForApproval__c.field-meta.xml
<CustomField>
    <fullName>cve__StatusForApproval__c</fullName>
    <inlineHelpText>When an approval process is used, the Status value that is to be approved is set here so that it is available to the approval process and so the approval process can transfer it to the Status field if it is approved.</inlineHelpText>
    <label>Status for Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>