force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__StatusReason__c.field-meta.xml
<CustomField>
    <fullName>cve__StatusReason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cve__Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accelerated Payout</fullName>
            </value>
            <value>
                <fullName>AD&amp;D Loss</fullName>
            </value>
            <value>
                <fullName>ADB Death</fullName>
            </value>
            <value>
                <fullName>ADL Loss</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Disabled Any Occupation</fullName>
            </value>
            <value>
                <fullName>Disabled Own Occupation</fullName>
            </value>
            <value>
                <fullName>Exception Authorized by Management</fullName>
            </value>
            <value>
                <fullName>Marked Up in Error</fullName>
            </value>
            <value>
                <fullName>Information Requested Not Received</fullName>
            </value>
            <value>
                <fullName>Matured</fullName>
            </value>
            <value>
                <fullName>Maximum Age</fullName>
            </value>
            <value>
                <fullName>Maximum Duration</fullName>
            </value>
            <value>
                <fullName>Misrepresentation</fullName>
            </value>
            <value>
                <fullName>Not an Accident Under the Terms of the Contract</fullName>
            </value>
            <value>
                <fullName>Not Disabled Any Occupation</fullName>
            </value>
            <value>
                <fullName>Not Disabled Own Occupation</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Policy Exclusion(s)</fullName>
            </value>
            <value>
                <fullName>Pre-existing Condition</fullName>
            </value>
            <value>
                <fullName>RTW Gainful Occupation</fullName>
            </value>
            <value>
                <fullName>RTW Own Occupation</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Suicide</fullName>
            </value>
            <value>
                <fullName>Terms of Contract Not Met</fullName>
            </value>
            <value>
                <fullName>Unpaid Premium</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Reversal of finalised claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>