force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__StatusReasons__c.field-meta.xml
<CustomField>
    <fullName>cve__StatusReasons__c</fullName>
    <label>Status Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--- Incomplete ---</fullName>
            </value>
            <value>
                <fullName>Need Employer Statement</fullName>
            </value>
            <value>
                <fullName>Need Employee Statement</fullName>
            </value>
            <value>
                <fullName>Need Attending Physician Statement</fullName>
            </value>
            <value>
                <fullName>--- Pending ---</fullName>
            </value>
            <value>
                <fullName>Newly Assigned</fullName>
            </value>
            <value>
                <fullName>Evaluating Received Data</fullName>
            </value>
            <value>
                <fullName>Awaiting Medical</fullName>
            </value>
            <value>
                <fullName>Preexisting Condition Investigation</fullName>
            </value>
            <value>
                <fullName>Awaiting Vocational</fullName>
            </value>
            <value>
                <fullName>Awaiting Financial</fullName>
            </value>
            <value>
                <fullName>Awaiting Other Information</fullName>
            </value>
            <value>
                <fullName>Anticipatory Claim - Pending</fullName>
            </value>
            <value>
                <fullName>--- Approved ---</fullName>
            </value>
            <value>
                <fullName>Insufficient Medical Documentation</fullName>
            </value>
            <value>
                <fullName>Insufficient Vocational Documentation</fullName>
            </value>
            <value>
                <fullName>Insufficient Financial Documentation</fullName>
            </value>
            <value>
                <fullName>Anticipated Medical Recovery Date</fullName>
            </value>
            <value>
                <fullName>Released By Treating Physician</fullName>
            </value>
            <value>
                <fullName>Return to Work</fullName>
            </value>
            <value>
                <fullName>Contractual Limitation Applied</fullName>
            </value>
            <value>
                <fullName>Return to Work Responsibility Limitation</fullName>
            </value>
            <value>
                <fullName>Death of Member</fullName>
            </value>
            <value>
                <fullName>Settlement - Approved</fullName>
            </value>
            <value>
                <fullName>Legal Settlement - Approved</fullName>
            </value>
            <value>
                <fullName>Contested Claim - Approved</fullName>
            </value>
            <value>
                <fullName>Work Related Condition - Approved</fullName>
            </value>
            <value>
                <fullName>Claimant Expects to Return to Work</fullName>
            </value>
            <value>
                <fullName>--- Denied ---</fullName>
            </value>
            <value>
                <fullName>Proof of Loss Not Provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>