force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__Statutory__c.field-meta.xml
<CustomField>
    <fullName>cve__Statutory__c</fullName>
    <formula>cve__Benefit__r.cve__Statutory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statutory</label>
    <type>Checkbox</type>
</CustomField>