force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__SubmittedCoverageAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__SubmittedCoverageAmount__c</fullName>
    <inlineHelpText>Amount of insurance claimed</inlineHelpText>
    <label>Submitted Coverage Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>