force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__SubmittedCoveragePercentage__c.field-meta.xml
<CustomField>
    <fullName>cve__SubmittedCoveragePercentage__c</fullName>
    <inlineHelpText>Percentage of insurance claimed</inlineHelpText>
    <label>Submitted Coverage Percentage</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>