force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TermDividendAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__TermDividendAmount__c</fullName>
    <label>Term Dividend Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>