force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TherapeuticCounselingMaximum__c.field-meta.xml
<CustomField>
    <fullName>cve__TherapeuticCounselingMaximum__c</fullName>
    <formula>IF (! ISNULL(cve__Benefit__r.cve__TherapeuticCounselingAmountMaximum__c) &amp;&amp; ! ISNULL(cve__Benefit__r.cve__TherapeuticCounselingPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
    MIN(cve__Benefit__r.cve__TherapeuticCounselingAmountMaximum__c,  cve__Benefit__r.cve__TherapeuticCounselingPercentageMaximum__c *  cve__CoverageAmount__c),
    IF (! ISNULL(cve__Benefit__r.cve__TherapeuticCounselingAmountMaximum__c),
        cve__Benefit__r.cve__TherapeuticCounselingAmountMaximum__c,
        IF (! ISNULL(cve__Benefit__r.cve__TherapeuticCounselingPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
            cve__Benefit__r.cve__TherapeuticCounselingPercentageMaximum__c * cve__CoverageAmount__c,
            null
        )
    )
)</formula>
    <label>Therapeutic Counseling Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>