force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ThumbAndIndexFingerOfEitherHand__c.field-meta.xml
<CustomField>
    <fullName>cve__ThumbAndIndexFingerOfEitherHand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thumb and Index Finger of Either Hand</label>
    <type>Checkbox</type>
</CustomField>