force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ToBeIncurredBeforeTax__c.field-meta.xml
<CustomField>
    <fullName>cve__ToBeIncurredBeforeTax__c</fullName>
    <label>To Be Incurred Before Tax</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>