force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ToBeIncurredLastCalculated__c.field-meta.xml
<CustomField>
    <fullName>cve__ToBeIncurredLastCalculated__c</fullName>
    <label>To Be Incurred Last Calculated</label>
    <type>DateTime</type>
</CustomField>