force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TollingAsOf__c.field-meta.xml
<CustomField>
    <fullName>cve__TollingAsOf__c</fullName>
    <label>As Of</label>
    <type>DateTime</type>
</CustomField>