force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalAdaptiveHomeVehicleBenefit__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalAdaptiveHomeVehicleBenefit__c</fullName>
    <label>Total Adaptive Home &amp; Vehicle Benefit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>