force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalCareerAdjustmentBenefit__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalCareerAdjustmentBenefit__c</fullName>
    <label>Total Career Adjustment Benefit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>