force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalChildCareBenefit__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalChildCareBenefit__c</fullName>
    <label>Total Child Care Benefit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>