force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalComaBenefit__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalComaBenefit__c</fullName>
    <label>Total Coma Benefit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>