force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalContribution__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalContribution__c</fullName>
    <formula>IF(
    AND(
        ISBLANK(cve__EmployeeContributionPreTax__c),
        ISBLANK(cve__EmployeeContributionPostTax__c),
        ISBLANK(cve__EmployerContributionPreTax__c),
        ISBLANK(cve__EmployerContributionPostTax__c)
    ),
NULL, 
    NULLVALUE(cve__EmployeeContributionPreTax__c, 0)
    + NULLVALUE(cve__EmployeeContributionPostTax__c, 0)
    + NULLVALUE(cve__EmployerContributionPreTax__c, 0)
    + NULLVALUE(cve__EmployerContributionPostTax__c, 0)
)</formula>
    <label>Total Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>