force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalCriticalBurnBenefit__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalCriticalBurnBenefit__c</fullName>
    <label>Total Critical Burn Benefit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>