force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalDayCareBenefit__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalDayCareBenefit__c</fullName>
    <label>Total Day Care Benefit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>