force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalDoubleIndemnityCommonCarrierBenefit__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalDoubleIndemnityCommonCarrierBenefit__c</fullName>
    <label>Total Double Indemnity Com Car Benefit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>