force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalFeloniousAssaultBenefit__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalFeloniousAssaultBenefit__c</fullName>
    <label>Total Felonious Assault Benefit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>