force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalHigherEducationBenefit__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalHigherEducationBenefit__c</fullName>
    <label>Total Higher Education Benefit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>