force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalIncurred__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalIncurred__c</fullName>
    <inlineHelpText>Before tax total value of all paid payments that have been calculated or manually added.</inlineHelpText>
    <label>Total Incurred Before Taxes</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>