force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalIncurredAsOf__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalIncurredAsOf__c</fullName>
    <label>Total Incurred as of</label>
    <type>Date</type>
</CustomField>