force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalIncurredNet__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalIncurredNet__c</fullName>
    <inlineHelpText>Net total value of all paid payments that have been calculated or manually added.</inlineHelpText>
    <label>Total Incurred Net</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>