force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalLiability__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalLiability__c</fullName>
    <inlineHelpText>Before tax total of paid and projected Payments up to the &quot;Liability Through&quot; date.</inlineHelpText>
    <label>Total Liability Before Taxes</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>