force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalLiabilityAsOf__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalLiabilityAsOf__c</fullName>
    <label>Total Liability As Of</label>
    <type>Date</type>
</CustomField>