force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalLiabilityNet__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalLiabilityNet__c</fullName>
    <inlineHelpText>Net total of paid and projected Payments up to the &quot;Liability Through&quot; date.</inlineHelpText>
    <label>Total Liability Net</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>