force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalPaidDays__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalPaidDays__c</fullName>
    <formula>IF(ISPICKVAL(cve__Benefit__r.cve__WorkWeekDays__c, &apos;5&apos;), cve__PaidWeekDays__c, cve__PaidDays__c)</formula>
    <inlineHelpText>For paid Payments, where Benefit Work Week Days are 5 only week days are summed otherwise all days are summed</inlineHelpText>
    <label>Total Paid Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>