force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalPremiumPaid__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalPremiumPaid__c</fullName>
    <formula>IF(
    AND(
        ISBLANK(cve__EmployeePremiumPaidPreTax__c),
        ISBLANK(cve__EmployeePremiumPaidPostTax__c),
        ISBLANK(cve__EmployerPremiumPaidPreTax__c),
        ISBLANK(cve__EmployerPremiumPaidPostTax__c)
    ),
NULL, 
    NULLVALUE(cve__EmployeePremiumPaidPreTax__c, 0)
    + NULLVALUE(cve__EmployeePremiumPaidPostTax__c, 0)
    + NULLVALUE(cve__EmployerPremiumPaidPreTax__c, 0)
    + NULLVALUE(cve__EmployerPremiumPaidPostTax__c, 0)
)</formula>
    <label>Total Premium Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>