force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalRepatriationBenefit__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalRepatriationBenefit__c</fullName>
    <label>Total Repatriation Benefit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>