force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalSpouseEducationBenefit__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalSpouseEducationBenefit__c</fullName>
    <label>Total Spouse Education Benefit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>