force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__TotalTherapeuticCounselingBenefit__c.field-meta.xml
<CustomField>
    <fullName>cve__TotalTherapeuticCounselingBenefit__c</fullName>
    <label>Total Therapeutic Counseling Benefit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>